[package]
name = "open-imago"
version = "0.1.0"
authors = ["itsakeyfut <sicsempertyrannis98@gmail.com>"]
description = "A simple YouTube downloader with a focus on speed and efficiency."
repository = "https://github.com/itsakeyfut/open-imago"
readme = "README.md"
categories = ["video", "audio", "downloader", "mp4", "mp3", "encoder"]
edition = "2024"
rust-version = "1.86"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
yt-dlp = "1.3.3"

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
